--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,14 +1,16 @@
 {
-    "app_name": "الرعاية الصــــحية",
-    "skip": "تخطي",
-    "titleOnboarding1": "مرحبا بك في تطبيق الرعاية الصحية",
-    "titleOnboarding2": "حجز مواعيدك الطبية بسهولة",
-    "titleOnboarding3": "متابعة حالتك الصحية باستمرار",
-    "descraptionOnboarding1": "نحن هنا لمساعدتك في الحصول على الرعاية الطبية في أي وقت ومن أي مكان.",
-    "descraptionOnboarding2": "تطبيقنا يوفر لك طريقة سهلة لحجز مواعيد مع الأطباء المتخصصين.",
-    "descraptionOnboarding3": "يمكنك متابعة صحتك بشكل مستمر باستخدام الأدوات المتاحة في التطبيق.",
-    "next": "التالي",
-    "change_language": "تغيير اللغة",
-    "change_theme": "تغيير المظهر"
-  }
-  
+  "app_name": "الرعاية الصــــحية",
+  "skip": "تخطي",
+  "titleOnboarding1": "مرحبا بك في تطبيق الرعاية الصحية",
+  "titleOnboarding2": "حجز مواعيدك الطبية بسهولة",
+  "titleOnboarding3": "متابعة حالتك الصحية باستمرار",
+  "titleOnboarding4": "ابقَ على اتصال واطّلع على سجلاتك",
+  "descraptionOnboarding1": "نحن هنا لمساعدتك في الحصول على الرعاية الطبية في أي وقت ومن أي مكان.",
+  "descraptionOnboarding2": "تطبيقنا يوفر لك طريقة سهلة لحجز مواعيد مع الأطباء المتخصصين.",
+  "descraptionOnboarding3": "يمكنك متابعة صحتك بشكل مستمر باستخدام الأدوات المتاحة في التطبيق.",
+  "descraptionOnboarding4": "ابقَ على اتصال بمقدمي الرعاية الصحية الخاصين بك واطّلع على سجلاتك الطبية في أي وقت.",
+  "next": "التالي",
+  "get_started": "ابــــدأ",
+  "change_language": "تغيير اللغة",
+  "change_theme": "تغيير المظهر"
+}
