--- a/lang/en.json
+++ b/lang/en.json
@@ -1,14 +1,16 @@
 {
-    "app_name": "SmartCare",
-    "skip": "Skip",
-    "titleOnboarding1": "Welcome to the SmartCare App",
-    "titleOnboarding2": "Easily Book Your Medical Appointments",
-    "titleOnboarding3": "Continuously Monitor Your Health",
-    "descraptionOnboarding1": "We are here to help you get medical care anytime, anywhere.",
-    "descraptionOnboarding2": "Our app provides an easy way to book appointments with specialized doctors.",
-    "descraptionOnboarding3": "You can continuously track your health using the tools available in the app.",
-    "next": "Next",
-    "change_language":"Change Language",
-    "change_theme":"Change Theme"
-  }
-  
+  "app_name": "SmartCare",
+  "skip": "Skip",
+  "titleOnboarding1": "Welcome to the SmartCare App",
+  "titleOnboarding2": "Easily Book Your Medical Appointments",
+  "titleOnboarding3": "Continuously Monitor Your Health",
+  "titleOnboarding4": "Stay Connected and Access Your Records",
+  "descraptionOnboarding1": "We are here to help you get medical care anytime, anywhere, and from anywhere.",
+  "descraptionOnboarding2": "Our app provides an easy way to book appointments with specialized doctors.",
+  "descraptionOnboarding3": "You can continuously track your health using the tools available in the app.",
+  "descraptionOnboarding4": "Stay connected with your healthcare providers and access your medical records anytime.",
+  "next": "Next",
+  "get_started": "Get Started",
+  "change_language": "Change Language",
+  "change_theme": "Change Theme"
+}
