Lock orientation to portrait for Onboarding screen and reset on dispose and change image onboarding

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -5,11 +5,11 @@
   "titleOnboarding2": "حجز مواعيدك الطبية بسهولة",
   "titleOnboarding3": "متابعة حالتك الصحية باستمرار",
   "titleOnboarding4": "ابقَ على اتصال واطّلع على سجلاتك",
-  "descraptionOnboarding1": "نحن هنا لمساعدتك في الحصول على الرعاية الطبية في أي وقت ومن أي مكان.",
-  "descraptionOnboarding2": "تطبيقنا يوفر لك طريقة سهلة لحجز مواعيد مع الأطباء المتخصصين.",
-  "descraptionOnboarding3": "يمكنك متابعة صحتك بشكل مستمر باستخدام الأدوات المتاحة في التطبيق.",
-  "descraptionOnboarding4": "ابقَ على اتصال بمقدمي الرعاية الصحية الخاصين بك واطّلع على سجلاتك الطبية في أي وقت.",
-  "next": "التالي",
+  "descraptionOnboarding1": "نحن هنا لمساعدتك في الحصول على الرعاية الطبية في أي وقت ومن أي مكان. بفضل التطبيق، يمكنك التواصل مع الأطباء والحصول على استشارات طبية عن بُعد بكل سهولة.",
+  "descraptionOnboarding2": "تطبيقنا يوفر لك طريقة سهلة لحجز مواعيد مع الأطباء المتخصصين. اختر التخصص الطبي الذي تحتاجه، وحدد الوقت المناسب لك، واحصل على تأكيد فوري للمواعيد.",
+  "descraptionOnboarding3": "يمكنك متابعة صحتك بشكل مستمر باستخدام الأدوات المتاحة في التطبيق. من خلال تتبع التاريخ الطبي والقياسات الحيوية، يمكنك مراقبة حالتك الصحية بكل دقة.",
+  "descraptionOnboarding4": "ابقَ على اتصال بمقدمي الرعاية الصحية الخاصين بك واطّلع على سجلاتك الطبية في أي وقت. من خلال التطبيق، يمكنك الوصول إلى تفاصيل مواعيدك السابقة والاتصال بأطبائك بسهولة.",
+  "next": "التـــــالي",
   "get_started": "ابــــدأ",
   "change_language": "تغيير اللغة",
   "change_theme": "تغيير المظهر"
