--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,16 +1,33 @@
 {
-  "app_name": "الرعاية الصــــحية",
+  "app_name": "الرعاية الصحية الذكية",
   "skip": "تخطي",
-  "titleOnboarding1": "مرحبا بك في تطبيق الرعاية الصحية",
-  "titleOnboarding2": "حجز مواعيدك الطبية بسهولة",
-  "titleOnboarding3": "متابعة حالتك الصحية باستمرار",
-  "titleOnboarding4": "ابقَ على اتصال واطّلع على سجلاتك",
-  "descraptionOnboarding1": "نحن هنا لمساعدتك في الحصول على الرعاية الطبية في أي وقت ومن أي مكان. بفضل التطبيق، يمكنك التواصل مع الأطباء والحصول على استشارات طبية عن بُعد بكل سهولة.",
-  "descraptionOnboarding2": "تطبيقنا يوفر لك طريقة سهلة لحجز مواعيد مع الأطباء المتخصصين. اختر التخصص الطبي الذي تحتاجه، وحدد الوقت المناسب لك، واحصل على تأكيد فوري للمواعيد.",
-  "descraptionOnboarding3": "يمكنك متابعة صحتك بشكل مستمر باستخدام الأدوات المتاحة في التطبيق. من خلال تتبع التاريخ الطبي والقياسات الحيوية، يمكنك مراقبة حالتك الصحية بكل دقة.",
-  "descraptionOnboarding4": "ابقَ على اتصال بمقدمي الرعاية الصحية الخاصين بك واطّلع على سجلاتك الطبية في أي وقت. من خلال التطبيق، يمكنك الوصول إلى تفاصيل مواعيدك السابقة والاتصال بأطبائك بسهولة.",
-  "next": "التـــــالي",
-  "get_started": "ابــــدأ",
+  "titleOnboarding1": "مرحبًا بك في تطبيق الرعاية الصحية الذكية",
+  "titleOnboarding2": "حجز مواعيد طبية بكل سهولة",
+  "titleOnboarding3": "متابعة صحتك بشكل مستمر",
+  "titleOnboarding4": "ابقَ على اتصال واطّلع على سجلاتك الطبية",
+  "descraptionOnboarding1": "نحن هنا لمساعدتك في الحصول على الرعاية الطبية في أي وقت ومن أي مكان. تطبيقنا يتميز بواجهة سهلة الاستخدام ومطورة لضمان تجربة سلسة للوصول إلى خدمات الرعاية الصحية.",
+  "descraptionOnboarding2": "يوفر لك التطبيق طريقة سهلة لحجز مواعيد مع الأطباء المتخصصين. يمكنك تصفح الأطباء حسب التخصص والموقع، واختيار الأنسب لك بكل سهولة ومرونة.",
+  "descraptionOnboarding3": "يمكنك متابعة صحتك بشكل مستمر باستخدام الأدوات المتاحة في التطبيق، مثل تتبع جدول مواعيدك، نتائج الفحوصات، وتلقي التذكيرات لضمان عدم تفويت أي زيارة هامة.",
+  "descraptionOnboarding4": "ابقَ على اتصال بمقدمي الرعاية الصحية واطّلع على سجلاتك الطبية في أي وقت. يتيح لك التطبيق الوصول بسهولة إلى تاريخك الطبي وإدارة بياناتك الصحية بأمان.",
+  "next": "التالي",
+  "get_started": "ابدأ الآن",
   "change_language": "تغيير اللغة",
-  "change_theme": "تغيير المظهر"
+  "change_theme": "تغيير المظهر",
+  "welcom_back": "مرحبًا بعودتك",
+  "descraptionLogin": "يسعدنا عودتك، لا يمكننا الانتظار لرؤية ما قمت به منذ آخر مرة سجلت فيها الدخول.",
+  "email": "البريد الإلكتروني",
+  "password": "كلمة المرور",
+  "login": "تسجيل الدخول",
+  "forgot_password": "نسيت كلمة المرور؟",
+  "not_have_account": "ليس لديك حساب؟",
+  "create_register": "إنشاء حساب",
+  "descraptionRegister": "اشترك الآن وابدأ في استكشاف جميع ميزات التطبيق. نحن متحمسون لانضمامك إلى مجتمعنا!",
+  "your_number": "رقمك",
+  "register": "إنشاء حساب",
+  "already_have_account": "هل لديك حساب بالفعل؟",
+  "or_sign_in_with": "أو سجل الدخول باستخدام",
+  "by_logging": "بتسجيل الدخول، فإنك توافق على",
+  "terms_of_use": "الشروط والأحكام",
+  "and": "و",
+  "privacy_policy": "سياسة الخصوصية"
 }
