Done login form textFiled widget

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -29,5 +29,6 @@
   "by_logging": "بتسجيل الدخول، فإنك توافق على",
   "terms_of_use": "الشروط والأحكام",
   "and": "و",
-  "privacy_policy": "سياسة الخصوصية"
+  "privacy_policy": "سياسة الخصوصية",
+  "is_required":"مطلوب"
 }
