add text in lang and change wrone text

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,34 +1,38 @@
 {
   "app_name": "الرعاية الصحية الذكية",
   "skip": "تخطي",
-  "titleOnboarding1": "مرحبًا بك في تطبيق الرعاية الصحية الذكية",
-  "titleOnboarding2": "حجز مواعيد طبية بكل سهولة",
-  "titleOnboarding3": "متابعة صحتك بشكل مستمر",
-  "titleOnboarding4": "ابقَ على اتصال واطّلع على سجلاتك الطبية",
-  "descraptionOnboarding1": "نحن هنا لمساعدتك في الحصول على الرعاية الطبية في أي وقت ومن أي مكان. تطبيقنا يتميز بواجهة سهلة الاستخدام ومطورة لضمان تجربة سلسة للوصول إلى خدمات الرعاية الصحية.",
-  "descraptionOnboarding2": "يوفر لك التطبيق طريقة سهلة لحجز مواعيد مع الأطباء المتخصصين. يمكنك تصفح الأطباء حسب التخصص والموقع، واختيار الأنسب لك بكل سهولة ومرونة.",
-  "descraptionOnboarding3": "يمكنك متابعة صحتك بشكل مستمر باستخدام الأدوات المتاحة في التطبيق، مثل تتبع جدول مواعيدك، نتائج الفحوصات، وتلقي التذكيرات لضمان عدم تفويت أي زيارة هامة.",
-  "descraptionOnboarding4": "ابقَ على اتصال بمقدمي الرعاية الصحية واطّلع على سجلاتك الطبية في أي وقت. يتيح لك التطبيق الوصول بسهولة إلى تاريخك الطبي وإدارة بياناتك الصحية بأمان.",
-  "next": "التالي",
-  "get_started": "ابدأ الآن",
   "change_language": "تغيير اللغة",
   "change_theme": "تغيير المظهر",
-  "welcom_back": "مرحبًا بعودتك",
-  "descraptionLogin": "يسعدنا عودتك، لا يمكننا الانتظار لرؤية ما قمت به منذ آخر مرة سجلت فيها الدخول.",
+  "title_onboarding_1": "مرحبًا بك في تطبيق الرعاية الصحية الذكية",
+  "title_onboarding_2": "حجز مواعيد طبية بكل سهولة",
+  "title_onboarding_3": "متابعة صحتك بشكل مستمر",
+  "title_onboarding_4": "ابقَ على اتصال واطّلع على سجلاتك الطبية",
+  "description_onboarding_1": "نحن هنا لمساعدتك في الحصول على الرعاية الطبية في أي وقت ومن أي مكان. يتميز تطبيقنا بواجهة سهلة الاستخدام وحديثة لضمان تجربة سلسة للوصول إلى خدمات الرعاية الصحية.",
+  "description_onboarding_2": "يوفر التطبيق طريقة سهلة لحجز المواعيد مع الأطباء المتخصصين. يمكنك تصفح الأطباء حسب التخصص والموقع، واختيار الأنسب لك بكل سهولة ومرونة.",
+  "description_onboarding_3": "تابع صحتك باستمرار باستخدام الأدوات المتاحة في التطبيق، مثل تتبع جدول مواعيدك، نتائج الفحوصات، والحصول على تذكيرات لضمان عدم تفويت أي زيارة هامة.",
+  "description_onboarding_4": "ابقَ على اتصال بمقدمي الرعاية الصحية واطّلع على سجلاتك الطبية في أي وقت. يتيح لك التطبيق إدارة تاريخك الطبي وبياناتك الصحية بأمان وسهولة.",
+  "next": "التالي",
+  "get_started": "ابدأ الآن",
+  "welcome_back": "مرحبًا بعودتك",
+  "description_login": "يسعدنا عودتك! دعنا نكمل من حيث توقفت.",
   "email": "البريد الإلكتروني",
   "password": "كلمة المرور",
   "login": "تسجيل الدخول",
   "forgot_password": "نسيت كلمة المرور؟",
-  "not_have_account": "ليس لديك حساب؟",
-  "create_register": "إنشاء حساب",
-  "descraptionRegister": "اشترك الآن وابدأ في استكشاف جميع ميزات التطبيق. نحن متحمسون لانضمامك إلى مجتمعنا!",
-  "your_number": "رقمك",
+  "no_account": "ليس لديك حساب؟",
+  "create_account": "إنشاء حساب",
+  "description_register": "سجل الآن لاستكشاف جميع ميزات تطبيقنا. نحن متحمسون لانضمامك إلى مجتمعنا!",
+  "your_number": "رقم الهاتف",
   "register": "إنشاء حساب",
   "already_have_account": "هل لديك حساب بالفعل؟",
   "or_sign_in_with": "أو سجل الدخول باستخدام",
-  "by_logging": "بتسجيل الدخول، فإنك توافق على",
+  "by_logging_in": "بتسجيل الدخول، فإنك توافق على",
   "terms_of_use": "الشروط والأحكام",
   "and": "و",
   "privacy_policy": "سياسة الخصوصية",
-  "is_required":"مطلوب"
+  "is_required": "مطلوب",
+  "forgot_password_title": "نسيت كلمة المرور؟",
+  "description_forgot_password": "نحن نأخذ أمان بياناتك الشخصية بجدية. قم بإعادة تعيين كلمة المرور الخاصة بك بسهولة وأمان.",
+  "reset_password": "إعادة تعيين كلمة المرور",
+  "or": "أو"
 }
