--- a/lang/en.json
+++ b/lang/en.json
@@ -1,34 +1,38 @@
 {
   "app_name": "SmartCare",
   "skip": "Skip",
-  "titleOnboarding1": "Welcome to the SmartCare App",
-  "titleOnboarding2": "Easily Book Your Medical Appointments",
-  "titleOnboarding3": "Continuously Monitor Your Health",
-  "titleOnboarding4": "Stay Connected and Access Your Records",
-  "descraptionOnboarding1": "We are here to help you get medical care anytime, and from anywhere. Our app is designed for ease of use, with a modern interface that ensures a smooth experience for accessing healthcare services.",
-  "descraptionOnboarding2": "Our app provides an easy way to book appointments with specialized doctors. You can browse doctors by specialty and location, and choose the one that best suits your needs, all with ease and flexibility.",
-  "descraptionOnboarding3": "You can continuously track your health using the tools available in the app. This includes tracking your schedule, results, and receiving appointment reminders to ensure you never miss an important visit.",
-  "descraptionOnboarding4": "Stay connected with your healthcare providers and access your medical records anytime. Enjoy easy access to your medical history and manage your health data securely and reliably.",
-  "next": "Next",
-  "get_started": "Get Started",
   "change_language": "Change Language",
   "change_theme": "Change Theme",
-  "welcom_back": "Welcome Back",
-  "descraptionLogin": "We're excited to have you back, can't wait to see what you've been up to since you last logged in.",
+  "title_onboarding_1": "Welcome to the SmartCare App",
+  "title_onboarding_2": "Easily Book Your Medical Appointments",
+  "title_onboarding_3": "Continuously Monitor Your Health",
+  "title_onboarding_4": "Stay Connected and Access Your Records",
+  "description_onboarding_1": "Get medical care anytime, anywhere. Our app is designed with a user-friendly interface to ensure a seamless experience in accessing healthcare services.",
+  "description_onboarding_2": "Easily book appointments with specialized doctors. Browse by specialty and location to find the best fit for your needs with ease and flexibility.",
+  "description_onboarding_3": "Track your health continuously with tools in the app. Manage schedules, view results, and get reminders for appointments to stay on top of your health.",
+  "description_onboarding_4": "Stay connected with your healthcare providers and access your medical records anytime. Manage your medical history securely and efficiently.",
+  "next": "Next",
+  "get_started": "Get Started",
+  "welcome_back": "Welcome Back",
+  "description_login": "We're excited to have you back! Let's pick up where you left off.",
   "email": "Email",
   "password": "Password",
   "login": "Login",
   "forgot_password": "Forgot Password?",
-  "not_have_account": "Don't have an account?",
-  "create_register": "Create Account",
-  "descraptionRegister": "Sign up now and start exploring all that our app has to offer. We're excited to welcome you to our community!",
-  "your_number": "Your number",
-  "register":"Register",
+  "no_account": "Don't have an account?",
+  "create_account": "Create Account",
+  "description_register": "Sign up now to explore everything our app has to offer. We're thrilled to have you join us!",
+  "your_number": "Your Number",
+  "register": "Register",
   "already_have_account": "Already have an account?",
   "or_sign_in_with": "Or sign in with",
-  "by_logging": "By logging, you agree to our",
+  "by_logging_in": "By logging in, you agree to our",
   "terms_of_use": "Terms & Conditions",
   "and": "and",
-  "privacy_policy": "PrivacyPolicy",
-  "is_required":"is required"
+  "privacy_policy": "Privacy Policy",
+  "is_required": "is required",
+  "forgot_password_title": "Forgot Password",
+  "description_forgot_password": "We prioritize the security of your information. Reset your password safely and quickly.",
+  "reset_password": "Reset Password",
+  "or": "or"
 }
