Done Forget password screen ui ✅

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -31,7 +31,7 @@
   "and": "و",
   "privacy_policy": "سياسة الخصوصية",
   "is_required": "مطلوب",
-  "forgot_password_title": "نسيت كلمة المرور؟",
+  "forgot_password_title": "نسيت كلمة المرور",
   "description_forgot_password": "نحن نأخذ أمان بياناتك الشخصية بجدية. قم بإعادة تعيين كلمة المرور الخاصة بك بسهولة وأمان.",
   "reset_password": "إعادة تعيين كلمة المرور",
   "or": "أو"
