Done add Title Section Widget for doctor Speciality

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -39,5 +39,7 @@
   "submit": "إرسال",
   "or": "أو",
   "hi_mohamed":"مرحبا محــمد 👋",
-  "how_are_you_today":"كيف حالك اليوم؟"
-}
+  "how_are_you_today":"كيف حالك اليوم؟",
+   "see_all":"اظهار الكل",
+   "doctor_speciality":"التخصص الطبي"
+ }
