--- a/lang/en.json
+++ b/lang/en.json
@@ -39,5 +39,8 @@
   "submit": "Submit",
   "or": "or",
   "hi_mohamed":"Hi Mohamed 👋",
-  "how_are_you_today":"How are you today?"
+  "how_are_you_today":"How are you today?",
+  "see_all":"See All",
+  "doctor_speciality":"Doctor Speciality"
+
 }
