Done add Title Section Widget for popular doctor

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -41,5 +41,6 @@
   "hi_mohamed":"مرحبا محــمد 👋",
   "how_are_you_today":"كيف حالك اليوم؟",
    "see_all":"اظهار الكل",
-   "doctor_speciality":"التخصص الطبي"
+   "doctor_speciality":"التخصص الطبي",
+   "popular_doctor":"الأطباء المحبوبين"
  }
