--- a/lang/en.json
+++ b/lang/en.json
@@ -41,6 +41,6 @@
   "hi_mohamed":"Hi Mohamed 👋",
   "how_are_you_today":"How are you today?",
   "see_all":"See All",
-  "doctor_speciality":"Doctor Speciality"
-
+  "doctor_speciality":"Doctor Speciality",
+  "popular_doctor":"Popular Doctor"
 }
