change name from SmartCare to CurAi

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,9 +1,9 @@
 {
-  "app_name": "SmartCare",
+  "app_name": "CurAi",
   "skip": "Skip",
   "change_language": "Change Language",
   "change_theme": "Change Theme",
-  "title_onboarding_1": "Welcome to the SmartCare App",
+  "title_onboarding_1": "Welcome to the CurAi App",
   "title_onboarding_2": "Easily Book Your Medical Appointments",
   "title_onboarding_3": "Continuously Monitor Your Health",
   "title_onboarding_4": "Stay Connected and Access Your Records",
