added lang en and ar for doctor specialities

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -40,7 +40,19 @@
   "or": "أو",
   "hi_mohamed":"مرحبا محــمد 👋",
   "how_are_you_today":"كيف حالك اليوم؟",
-   "see_all":"اظهار الكل",
-   "doctor_speciality":"التخصص الطبي",
-   "popular_doctor":"الأطباء المحبوبين"
+  "see_all":"اظهار الكل",
+  "doctor_speciality":"التخصص الطبي",
+  "popular_doctor":"الأطباء المحبوبين",
+  "general": "عام",
+  "ent": "الأنف والأذن والحنجرة",
+  "pediatric": "طب الأطفال",
+  "urologist": "مسالك بولية",
+  "dentistry": "طب الأسنان",
+  "intestine": "أمراض الأمعاء",
+  "histologist": "علم الأنسجة",
+  "hepatology": "طب الكبد",
+  "cardiologist": "طب القلب",
+  "neurologic": "طب الأعصاب",
+  "pulmonary": "طب الرئة",
+  "optometry": "فحص البصر"
  }
