change some text

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -41,7 +41,7 @@
   "hi_mohamed":"مرحبا محــمد 👋",
   "how_are_you_today":"كيف حالك اليوم؟",
   "see_all":"اظهار الكل",
-  "doctor_speciality":"التخصص الطبي",
+  "doctor_speciality":"التخصصات الطبية",
   "popular_doctor":"الأطباء المحبوبين",
   "general": "عام",
   "ent": "الأنف والأذن والحنجرة",
