--- a/lang/en.json
+++ b/lang/en.json
@@ -44,7 +44,7 @@
   "doctor_speciality":"Doctor Speciality",
   "popular_doctor":"Popular Doctor",
   "general": "General",
-  "ent": "ENT",
+  "ent": "Ent",
   "pediatric": "Pediatric",
   "urologist": "Urologist",
   "dentistry": "Dentistry",
