Add AllDoctorScreen and related components for doctor listing and filtering

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -54,5 +54,6 @@
   "cardiologist": "طب القلب",
   "neurologic": "طب الأعصاب",
   "pulmonary": "طب الرئة",
-  "optometry": "فحص البصر"
+  "optometry": "فحص البصر",
+  "doctors": "الأطبـــاء"
  }
