--- a/lang/en.json
+++ b/lang/en.json
@@ -54,5 +54,6 @@
   "cardiologist": "Cardiologist",
   "neurologic": "Neurologic",
   "pulmonary": "Pulmonary",
-  "optometry": "Optometry"
+  "optometry": "Optometry",
+  "doctors": "Doctors"
 }
