Refactor theme and localization management; update shared preferences keys, remove unused app state, and enhance context extensions for better readability and maintainability.

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -38,11 +38,11 @@
   "pin_description": "أضف رقم PIN لجعل حسابك أكثر أمانًا وأسهل لتسجيل الدخول.",
   "submit": "إرسال",
   "or": "أو",
-  "hi_mohamed":"مرحبا محــمد 👋",
-  "how_are_you_today":"كيف حالك اليوم؟",
-  "see_all":"اظهار الكل",
-  "doctor_speciality":"التخصصات الطبية",
-  "popular_doctor":"الأطباء المحبوبين",
+  "hi_mohamed": "مرحبا محــمد 👋",
+  "how_are_you_today": "كيف حالك اليوم؟",
+  "see_all": "اظهار الكل",
+  "doctor_speciality": "التخصصات الطبية",
+  "popular_doctor": "الأطباء المحبوبين",
   "general": "عام",
   "ent": "الأنف والأذن والحنجرة",
   "pediatric": "طب الأطفال",
@@ -55,5 +55,13 @@
   "neurologic": "طب الأعصاب",
   "pulmonary": "طب الرئة",
   "optometry": "فحص البصر",
-  "doctors": "الأطبـــاء"
- }
+  "doctors": "الأطبـــاء",
+  "settings": "الاعدادات",
+  "theme": "المظهر",
+  "light": "فاتح",
+  "dark": "داكن",
+  "system_default": "الإعدادات الافتراضية للنظام",
+  "language": "اللغة",
+  "english": "الإنجليزية",
+  "arabic": "العربية"
+}
