--- a/lang/en.json
+++ b/lang/en.json
@@ -38,11 +38,11 @@
   "pin_description": "Add a PIN number to make your account more secure and easy to sign in.",
   "submit": "Submit",
   "or": "or",
-  "hi_mohamed":"Hi Mohamed 👋",
-  "how_are_you_today":"How are you today?",
-  "see_all":"See All",
-  "doctor_speciality":"Doctor Speciality",
-  "popular_doctor":"Popular Doctor",
+  "hi_mohamed": "Hi Mohamed 👋",
+  "how_are_you_today": "How are you today?",
+  "see_all": "See All",
+  "doctor_speciality": "Doctor Speciality",
+  "popular_doctor": "Popular Doctor",
   "general": "General",
   "ent": "Ent",
   "pediatric": "Pediatric",
@@ -55,5 +55,13 @@
   "neurologic": "Neurologic",
   "pulmonary": "Pulmonary",
   "optometry": "Optometry",
-  "doctors": "Doctors"
+  "doctors": "Doctors",
+  "settings": "Settings",
+  "theme": "Theme",
+  "light": "Light",
+  "dark": "Dark",
+  "system_default": "System Default",
+  "language": "Language",
+  "english": "English",
+  "arabic": "Arabic"
 }
