Add localized strings for banner and find nearby features; implement custom painter for banner widget

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -39,6 +39,8 @@
   "submit": "إرسال",
   "or": "أو",
   "hi_mohamed": "مرحبا محــمد 👋",
+  "banner_book_home":  "احجز \nواجد الطبيب \nالأقرب إليك",
+  "find_nearby": "ابحث عن الأقرب",
   "how_are_you_today": "كيف حالك اليوم؟",
   "see_all": "اظهار الكل",
   "doctor_speciality": "التخصصات الطبية",
