--- a/lang/en.json
+++ b/lang/en.json
@@ -40,6 +40,8 @@
   "or": "or",
   "hi_mohamed": "Hi Mohamed 👋",
   "how_are_you_today": "How are you today?",
+  "banner_book_home": "Book and schedule with nearest doctor",
+  "find_nearby": "Find Nearby",
   "see_all": "See All",
   "doctor_speciality": "Doctor Speciality",
   "popular_doctor": "Popular Doctor",
