--- a/lang/ar.json
+++ b/lang/ar.json
@@ -65,5 +65,7 @@
   "system_default": "الإعدادات الافتراضية للنظام",
   "language": "اللغة",
   "english": "الإنجليزية",
-  "arabic": "العربية"
+  "arabic": "العربية",
+  "user_name": "اسم المستخدم",
+  "confirm_password": "تاكيد كلمة المرور"
 }
