Implement logout functionality with UI integration and state management

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -18,6 +18,10 @@
   "email": "البريد الإلكتروني",
   "password": "كلمة المرور",
   "login": "تسجيل الدخول",
+  "logout": "تسجيل الخروج",
+  "logout_message": "هل أنت متأكد أنك تريد تسجيل الخروج؟",
+  "cancel": "إلغاء",
+  "ok": "موافق",
   "forgot_password": "نسيت كلمة المرور؟",
   "no_account": "ليس لديك حساب؟",
   "create_account": "إنشاء حساب",
