--- a/lang/en.json
+++ b/lang/en.json
@@ -18,6 +18,10 @@
   "email": "Email",
   "password": "Password",
   "login": "Login",
+  "logout": "Logout",
+  "logout_message": "Are you sure you want to logout?",
+  "cancel": "Cancel",
+  "ok": "Ok",
   "forgot_password": "Forgot Password?",
   "no_account": "Don't have an account?",
   "create_account": "Create Account",
