Add change password screen and widget with localization support

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -22,8 +22,12 @@
   "logout_message": "هل أنت متأكد أنك تريد تسجيل الخروج؟",
   "cancel": "إلغاء",
   "ok": "موافق",
-  "changePassword": "تغيير كلمة المرور",
-  "forgot_password": "نسيت كلمة المرور؟",
+  "change_password": "تغيير كلمة المرور",
+  "description_change_password": "قم بتغيير كلمة المرور للحفاظ على أمان حسابك.",
+  "current_password": "كلمة المرور  الحالية",
+  "new_password": "كلمة المرور الجديدة",
+  "confirm_new_password": "تأكيد كلمة المرور الجديدة",
+   "forgot_password": "نسيت كلمة المرور؟",
   "no_account": "ليس لديك حساب؟",
   "create_account": "إنشاء حساب",
   "description_register": "سجل الآن لاستكشاف جميع ميزات تطبيقنا. نحن متحمسون لانضمامك إلى مجتمعنا!",
