--- a/lang/en.json
+++ b/lang/en.json
@@ -22,8 +22,12 @@
   "logout_message": "Are you sure you want to logout?",
   "cancel": "Cancel",
   "ok": "Ok",
-  "changePassword": "Change Password",
-  "forgot_password": "Forgot Password?",
+  "change_password": "Change Password",
+  "description_change_password": "Change your password to keep your account secure.",
+  "current_password": "Current Password",
+   "new_password": "New Password",
+  "confirm_new_password": "Confirm New Password",
+   "forgot_password": "Forgot Password?",
   "no_account": "Don't have an account?",
   "create_account": "Create Account",
   "description_register": "Sign up now to explore everything our app has to offer. We're thrilled to have you join us!",
