Enhance localization support by adding delete account confirmation messages and updating UI components for improved theme consistency

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -86,5 +86,7 @@
   "password_manager": "مدير كلمات المرور",
   "change_language": "تغيير اللغة",
   "change_theme": "تغيير المظهر",
-  "delete_account": "حذف الحساب"
+  "delete_account": "حذف الحساب",
+  "delete_account_message": "هل تريد حذف حسابك؟",
+  "delete": "حذف" 
  }
