Add color palette option to settings and enhance localization support

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -86,6 +86,7 @@
   "password_manager": "مدير كلمات المرور",
   "change_language": "تغيير اللغة",
   "change_theme": "تغيير المظهر",
+  "color_palette": "لوحة الالوان",
   "delete_account": "حذف الحساب",
   "delete_account_message": "هل تريد حذف حسابك؟",
   "delete": "حذف" 
