Add 'no_data' language key and improve shimmer effect colors based on theme; update CustomTextField and SearchBarDelegate to support suffix icons

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -103,5 +103,6 @@
   "phone_number": "رقم الهاتف",
   "complete_profile":  "اكمل الملف الشخصي",
     "complete_profile_title": "اكمل الملف الشخصي",
-  "description_complete_profile"  :"لا تقلق ، فقط يمكنك رؤية بياناتك الشخصية ، لا يمكن لاحد اخر لرؤيتها."
+  "description_complete_profile"  :"لا تقلق ، فقط يمكنك رؤية بياناتك الشخصية ، لا يمكن لاحد اخر لرؤيتها.",
+  "no_data": "لا توجد بيانات"
  }
