Add doctor details localization and implement custom app bar for doctor details screen

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -104,5 +104,26 @@
   "complete_profile":  "اكمل الملف الشخصي",
     "complete_profile_title": "اكمل الملف الشخصي",
   "description_complete_profile"  :"لا تقلق ، فقط يمكنك رؤية بياناتك الشخصية ، لا يمكن لاحد اخر لرؤيتها.",
-  "no_data": "لا توجد بيانات"
+  "no_data": "لا توجد بيانات",
+  "doctor_details": "تفاصيل الطبيب",
+  "egp": "ج.م",
+  "specialty": "التخصص",
+  "experience": "الخبرة",
+  "book_appointment": "احجز موعدًا",
+  "about": "حول",
+  "about_doctor": "حول الطبيب",
+  "about_me": "حولي",
+  "reviews": "التقييمات",
+  "location": "الموقع",
+  "working_time": "وقت العمل",
+  "saturday": "السبت",
+  "sunday": "الأحد",
+  "monday": "الاثنين",
+  "tuesday": "الثلاثاء",
+  "wednesday": "الأربعاء",
+  "thursday": "الخميس",
+  "friday": "الجمعة",
+  "am": "ص",
+  "pm": "م",
+   "medical_degree": "الدرجة الطبية"
  }
