Add location functionality with geolocation support and update localization strings

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -115,6 +115,7 @@
   "about_me": "حولي",
   "reviews": "التقييمات",
   "location": "الموقع",
+  "location_me": "موقعي",
   "working_time": "وقت العمل",
   "saturday": "السبت",
   "sunday": "الأحد",
