--- a/lang/en.json
+++ b/lang/en.json
@@ -114,6 +114,7 @@
   "about_me": "About Me",
   "reviews": "Reviews",
   "location": "Location",
+  "location_me": "Location Me",
   "working_time": "Working Time",
    "saturday": "Saturday",
   "sunday": "Sunday",
