Add review functionality with localization support and UI updates

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -126,5 +126,6 @@
   "friday": "الجمعة",
   "am": "ص",
   "pm": "م",
-   "medical_degree": "الدرجة الطبية"
+   "medical_degree": "الدرجة الطبية",
+   "add_review": "اضف تقييم"
  }
