--- a/lang/en.json
+++ b/lang/en.json
@@ -125,6 +125,7 @@
   "friday": "Friday",
   "am": "AM",
   "pm": "PM",
-  "medical_degree": "Medical Degree"
+  "medical_degree": "Medical Degree",
+  "add_review": "Add Review"
 
 }
