feat: Update localization for Arabic and English languages, adding new keys for contact and social media
refactor: Enhance adaptive dialogs to support scrolling content

fix: Improve custom text field widget to handle label visibility

feat: Implement Help Center screen with FAQ and Contact Us sections

chore: Add FAQ data model and integrate it into the Help Center

feat: Create Contact Us form with validation and submission handling

style: Refactor UI components for better readability and maintainability

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -130,5 +130,15 @@
    "add_review": "اضف تقييم",
    "your_review": "تقييمك",
    "rate": "تقييم",
-   "please_enter_review": "يرجى ادخال التقييم"
+   "please_enter_review": "يرجى ادخال التقييم",
+   "contact_us": "اتصل بنا",
+   "faq": "الاسئلة الشائعة",
+  "customer_service":  "خدمة العملاء",
+  "how_do_we_help_you":   "كيف يمكننا مساعدتك؟",
+  "send":    "ارسل",
+  "whatsApp":   "واتساب",
+  "website":  "موقع الانترنت",
+  "facebook":  "فيسبوك",
+  "x":  "X",
+  "instagram":  "انستقرام"
  }
