feat: Add doctor details fields and update UI to display full name

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -140,5 +140,6 @@
   "website":  "موقع الانترنت",
   "facebook":  "فيسبوك",
   "x":  "X",
-  "instagram":  "انستقرام"
+  "instagram":  "انستقرام",
+  "dr":  "دكتور"
  }
