--- a/lang/en.json
+++ b/lang/en.json
@@ -139,5 +139,6 @@
   "website": "Website",
   "facebook": "Facebook",
   "x": "X",
-  "instagram": "Instagram"
+  "instagram": "Instagram",
+  "dr"  :"Dr"
 }
