feat: Add 'no bio' message for doctors without a biography and update related UI logic

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -141,5 +141,6 @@
   "facebook":  "فيسبوك",
   "x":  "X",
   "instagram":  "انستقرام",
-  "dr":  "دكتور"
+  "dr":  "دكتور",
+  "no_bio":  "لا يوجد بيو لهذا الطبيب"
  }
