--- a/lang/ar.json
+++ b/lang/ar.json
@@ -142,5 +142,6 @@
   "x":  "X",
   "instagram":  "انستقرام",
   "dr":  "دكتور",
-  "no_bio":  "لا يوجد بيو لهذا الطبيب"
+  "no_bio":  "لا يوجد بيو لهذا الطبيب",
+  "doctor_not_have_location_info_maps":  "لا يوجد معلومات عن الموقع لهذا الطبيب"
  }
