feat: Add consultation price and medical specialization localization; refactor doctor details screen to include social contact options

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -143,5 +143,7 @@
   "instagram":  "انستقرام",
   "dr":  "د.ك",
   "no_bio":  "لا يوجد بيو لهذا الطبيب",
+  "consultation_price":  "سعر الاستشارة",
+  "medical_specialization":  "التخصص الطبي",
   "doctor_not_have_location_info_maps":  "لا يوجد معلومات عن الموقع لهذا الطبيب"
  }
