--- a/lang/en.json
+++ b/lang/en.json
@@ -144,5 +144,9 @@
   "no_bio": "No bio found for this doctor",
   "consultation_price": "Consultation Price",
   "medical_specialization": "Medical Specialization",
-  "doctor_not_have_location_info_maps": "This doctor does not have location information or maps"
+  "doctor_not_have_location_info_maps": "This doctor does not have location information or maps",
+  "set_manual": "Set Manual",
+  "select_date": "Select  Date",
+  "select_time": "Select Time",
+  "available_time": "Available Time"
 }
