Add localization for unavailable appointment booking and refactor appointment-related classes for improved functionality

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -149,6 +149,7 @@
 "set_manual":  "تحديد يدوي",
   "select_date":  " حدد التاريخ",
   "select_time":  "حدد الوقت",
-  "available_time":  "الوقت المتاح"
+  "available_time":  "الوقت المتاح",
+  "not_available_to_book":  "غير متاح للحجز"
 
  }
